# veridie-native

./: .gitignore  README.md
.github/workflows/: cmake.yml  cmake_linux.yml  cmake_windows.yml  veridie.yml
lib/: .clang-format  CMakeLists.txt  hostbuild.sh
lib/cmake/: coroutines.cmake  runontarget.cmake  warnings.cmake
lib/core/: CMakeLists.txt
lib/core/src/: CMakeLists.txt
lib/core/src/bt/: device.hpp
lib/core/src/ctrl/: commandadapter.cpp  commandadapter.hpp  controller.cpp  echocontroller.cpp  timer.cpp
lib/core/src/dice/: cast.cpp  engine.cpp  serializer.cpp  xmlparser.hpp
lib/core/src/fsm/: context.hpp  statebase.hpp  stateconnecting.cpp  stateconnecting.hpp  stateidle.cpp  stateidle.hpp  statenegotiating.cpp  statenegotiating.hpp  stateplaying.cpp  stateplaying.hpp  states.hpp  stateswitcher.hpp
lib/core/src/include/ctrl/: controller.hpp  timer.hpp
lib/core/src/include/dice/: cast.hpp  engine.hpp  serializer.hpp
lib/core/src/include/sign/: cmd.hpp  externalinvoker.hpp
lib/core/src/sign/: commandmanager.cpp  commandmanager.hpp  commandpool.hpp  commands.cpp  commands.hpp  events.cpp  events.hpp
lib/core/test/: CMakeLists.txt  fakelogger.hpp  test_cmd.cpp  test_controller.cpp  test_dice.cpp  test_timer.cpp
lib/dispatch/: CMakeLists.txt
lib/dispatch/src/: CMakeLists.txt
lib/dispatch/src/android/: javainvoker.cpp  jniexec.cpp  jniexec.hpp
lib/dispatch/src/common/: mainexec.cpp
lib/dispatch/test/: CMakeLists.txt  test_threading.cpp
lib/jni/: CMakeLists.txt
lib/jni/src/: CMakeLists.txt  javainvoker.hpp  jniexec.cpp  mainexec.hpp
lib/jni/test/: CMakeLists.txt  test_threading.cpp
lib/utils/: CMakeLists.txt
lib/utils/src/: CMakeLists.txt  format.cpp  log.cpp
lib/utils/src/include/utils/: alwayscopyable.hpp  coroutine.hpp  format.hpp  log.hpp  mempool.hpp  poolbuilder.hpp  poolptr.hpp  task.hpp  taskowner.hpp  taskutils.hpp
lib/utils/test/: CMakeLists.txt  test_log.cpp  test_mempool.cpp  test_task.cpp
